// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/http/bitbucket accepts custom baseUrl 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer token",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/some-url",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api-test.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api-test.bitbucket.org/some-url",
  },
]
`;

exports[`util/http/bitbucket posts 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer token",
      "host": "api.bitbucket.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "POST",
    "url": "https://api.bitbucket.org/some-url",
  },
]
`;
